--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = "Data structures and algorithms, implemented from scratch for fun, study, and practice."
 readme = "README.md"
 requires-python = ">=3.14"
-dependencies = ["numpy>=2.3.4"]
+dependencies = [
+    "matplotlib>=3.10.7",
+    "networkx>=3.5",
+    "numpy>=2.3.4",
+    "scipy>=1.16.3",
+]
